Upgrade to script extractor